--- a/Views/Common/BackMsg_List.cshtml
+++ b/Views/Common/BackMsg_List.cshtml
@@ -58,9 +58,10 @@
                     <th data-options="field: 'ID',width:80,checkbox:true"></th>
                     <th data-options="field:'ORDERCODE',width:210,sortable:true">订单号</th>
                     <th data-options="field:'STATUSNAME',width:200,sortable:true">事件名称</th>
-                    <th data-options="field:'TYPE',width:430,sortable:true,formatter:formatTYPE">类型</th>
-                    <th data-options="field:'STATUSTIME',width:150,sortable:true">返回时间</th>
+                    <th data-options="field:'TYPE',width:100,sortable:true,formatter:formatTYPE">类型</th>
+                    <th data-options="field:'STATUSVALUE',width:150,sortable:true">返回值</th>
                     <th data-options="field:'SYNCSTATUS',width:140,sortable:true,formatter:formatSYNCSTATUS">状态</th>
+                    <th data-options="field:'CREATETIME',width:150,sortable:true">创建时间</th>
                 </tr>
             </thead>
         </table>
