--- a/Views/Common/SyncFoo_List.cshtml
+++ b/Views/Common/SyncFoo_List.cshtml
@@ -117,6 +117,7 @@
                     <th data-options="field:'PORTCODE',width:70,sortable:true">口岸</th>
                     <th data-options="field:'REPUNITCODE',width:300,sortable:true">报关申报单位</th>
                     <th data-options="field:'INSPUNITCODE',width:300,sortable:true">报检申报单位</th>
+                    <th data-options="field:'TURNPRENO',width:300,sortable:true">转关预录入号</th>
                     <th data-options="field:'ENTRUSTREQUEST',width:100,sortable:true">订单需求</th>
                     <th data-options="field:'ENTRUSTTYPEID',width:70,sortable:true">委托类型</th>
                     <th data-options="field:'MANIFEST',width:100,sortable:true">载货清单</th>
