--- a/Views/Declare/DomesticBlc_Edit.cshtml
+++ b/Views/Declare/DomesticBlc_Edit.cshtml
@@ -3,10 +3,9 @@
          data-options="collapsible:true">
         <input type="hidden" name="ID" />
         <input type="hidden" name="type" value="01" />
-        <input type="hidden" name="CODE" />
         <input type="hidden" name="ASSOCIATENO" />
+        <input type="hidden" name="page" value="/Declare/DomesticBlc_Edit" />
 
-        <input type="hidden" name="DECLARATIONCODE" />
         <input type="hidden" name="ORDERCODE" />
         <table id="scene">
             <tr>
@@ -43,6 +42,16 @@
                 <td>
                     <label for="" style="color:red">出口企业:</label>
                     <input class="easyui-textbox" type="text" value="@ViewData["BUSIUNITNAME"]" disabled="disabled" />
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label for="">业务单号:</label>
+                    <input class="easyui-textbox" type="text" name="CODE" readonly="readonly" />
+                </td>
+                <td>
+                    <label for="">报关单号:</label>
+                    <input class="easyui-textbox" type="text" name="DECLARATIONCODE" readonly="readonly" />
                 </td>
             </tr>
 
@@ -177,21 +186,21 @@
             <tr>
 
                 <td style="text-align:left">
-                    <label for="LIHUOSIGN">理货标识:</label>
-                    <input class="" id="LIHUOSIGN" type="checkbox" name="LIHUOSIGN" value="1" />
+                    <label for="IFLIHUO">理货标识:</label>
+                    <input class="" id="IFLIHUO" type="checkbox" name="IFLIHUO" value="1" />
                 </td>
                 <td>
-                    <label for="LIHUOTIMES">理货次数:</label>
-                    <input class="easyui-numberspinner" name="LIHUOTIMES"
+                    <label for="LIHUOTOTAL">理货次数:</label>
+                    <input class="easyui-numberspinner" name="LIHUOTOTAL"
                            data-options="min:0">
                 </td>
                 <td style="text-align:left">
-                    <label for="KOUHUOSIGN">扣货标识:</label>
-                    <input class="" id="KOUHUOSIGN" type="checkbox" name="KOUHUOSIGN" value="1" />
+                    <label for="IFKOUHUO">扣货标识:</label>
+                    <input class="" id="IFKOUHUO" type="checkbox" name="IFKOUHUO" value="1" />
                 </td>
                 <td>
                     <label for="KOUHUOTIME">扣货时间:</label>
-                    <input class="easyui-datebox value" name="KOUHUOTIME" placeholder="开始时间">
+                    <input class="easyui-datetimebox value" name="KOUHUOTIME" editable="false">
                 </td>
             </tr>
             <tr>
@@ -230,17 +239,17 @@
                     <input class="" id="IFCHAYAN" type="checkbox" name="IFCHAYAN" value="1" />
                 </td>
                 <td>
-                    <label for="CHAYANTIMES">查验次数:</label>
-                    <input class="easyui-numberspinner" name="CHAYANTIMES"
+                    <label for="CHAYANTOTAL">查验次数:</label>
+                    <input class="easyui-numberspinner" name="CHAYANTOTAL"
                            data-options="min:0">
                 </td>
                 <td>
-                    <label for="CHAYANREMARK">查验备注:</label>
-                    <input class="easyui-textbox" type="text" name="CHAYANREMARK" />
+                    <label for="CHAYANDESC">查验备注:</label>
+                    <input class="easyui-textbox" type="text" name="CHAYANDESC" />
                 </td>
                 <td>
                     <label for="CHAYANZHILINGXIAFATIME" style="width:100px;">查验指令下发时间:</label>
-                    <input class="easyui-datebox value" name="CHAYANZHILINGXIAFATIME" placeholder="开始时间">
+                    <input class="easyui-datetimebox value" name="CHAYANZHILINGXIAFATIME" editable="false">
                 </td>
             </tr>
             <tr>
@@ -249,8 +258,8 @@
                     <input class="" id="IFTIAODANG" type="checkbox" name="IFTIAODANG" value="1" />
                 </td>
                 <td>
-                    <label for="TIAODANGTIMES">调档次数:</label>
-                    <input class="easyui-numberspinner" name="TIAODANGTIMES"
+                    <label for="TIAODANGTOTAL">调档次数:</label>
+                    <input class="easyui-numberspinner" name="TIAODANGTOTAL"
                            data-options="min:0">
                 </td>
                 <td>
