--- a/Views/Declare/DomesticBlc_List.cshtml
+++ b/Views/Declare/DomesticBlc_List.cshtml
@@ -15,11 +15,9 @@
     ];
     //2 查询条件  --单据号
     var search_code = [
-        {
-            code: 'CODE', name: '业务编号', selected: true
-        },
+        { code: 'CODE', name: '业务编号', selected: true },
         { code: 'CONTRACTNO', name: '发票合同号' },
-        { code: 'text', name: '报关单号' },
+        { code: 'DECLARATIONCODE', name: '报关单号' },
         { code: 'FWONO', name: 'FWO订单号' },
         { code: 'FOONO', name: 'FO号' }
     ];
@@ -43,13 +41,12 @@
                data-options="queryParams:{BUSITYPE:'BLC'} ">
             <thead data-options="frozen:true">
                 <tr>
-
-
                     <th data-options="field: 'ID',width:80,checkbox:true"></th>
+                    <th data-options="field:'CODE',width:120,sortable:true,">业务单号</th>
                     <th data-options="field:'BUSIUNITNAME',width:200,sortable:true">进口企业</th>
                     <th data-options="field:'BUSIUNITNAME',width:200,sortable:true">出口企业</th>
-                    <th data-options="field:'DECLARATIONCODE',width:150,sortable:true">报关单号</th>
-                    <th data-options="field:'DECLARATIONSTATUS',width:150,sortable:true">海关通关状态</th>
+                    <th data-options="field:'DECLARATIONCODE',width:100,sortable:true">报关单号</th>
+                    <th data-options="field:'DECLARATIONSTATUS',width:100,sortable:true">海关通关状态</th>
                     <th data-options="field:'text',width:100">出口报关单号</th>
                     <th data-options="field:'CONTRACTNO',width:100">发票合同号</th>
                     <th data-options="field:'DECLWAY',width:70,formatter:formatDECLWAY">申报方式</th>
@@ -72,10 +69,11 @@
                     <th data-options="field:'ASSOCIATETRADEWAY',width:100,sortable:true">贸易方式</th>
                     <th data-options="field:'FWONO',width:180,sortable:true">FWO订单号</th>
                     <th data-options="field:'FOONO',width:190,sortable:true">FOO报关服务号</th>
-                    <th data-options="field:'CODE',width:100,sortable:true">业务编号</th>
                     <th data-options="field:'CUSTOMDISTRICTCODE',width:100,sortable:true">关区代码</th>
                     <th data-options="field: 'ASSOCIATENO',width:200">两单关联号</th>
                     <th data-options="field: 'CORRESPONDNO',width:200">四单关联号</th>
+                    <th data-options="field: 'BUSINAME',width:200">业务类型</th>
+                    
                 </tr>
             </thead>
         </table>
