--- a/Views/Declare/OnelineIn_List.cshtml
+++ b/Views/Declare/OnelineIn_List.cshtml
@@ -16,18 +16,16 @@
     ];
     //2 查询条件  --单据号
     var search_code = [
-        {
-            code: 'DIVIDENO', name: '分单号', selected: true
-        },
+        { code: 'CODE', name: '业务编号',selected: true  },
+        { code: 'DIVIDENO', name: '分单号', },
         { code: 'TOTALNO', name: '总单号' },
         { code: 'text', name: '万达号' },
-        { code: 'CODE', name: '业务编号' },
         { code: 'CONTAINERNO', name: '集装箱号' },
         { code: 'TURNPRENO', name: '转关预录入号' },
         { code: 'FIRSTLADINGBILLNO', name: '一程提运单号' },
         { code: 'SECONDLADINGBILLNO', name: '二程提运单号' },
         { code: 'MANIFEST', name: '载货清单号' },
-        { code: 'text', name: '报关单号' },
+        { code: 'DECLARATIONCODE', name: '报关单号' },
         { code: 'FWONO', name: 'FWO订单号' },
         { code: 'FOONO', name: 'FO号' }
     ];
@@ -53,6 +51,7 @@
             <thead data-options="frozen:true">
                 <tr>
                     <th data-options="field: 'ID',width:80,checkbox:true"></th>
+                    <th data-options="field:'CODE',width:120,sortable:true,">业务单号</th>
                     <th data-options="field:'BUSIUNITNAME',width:200">收货人</th>
                     <th data-options="field:'DECLARATIONCODE',width:150,sortable:true">报关单号</th>
                     <th data-options="field:'DECLARATIONSTATUS',width:150,sortable:true">海关通关状态</th>
@@ -80,9 +79,6 @@
                     <th data-options="field:'SHIWUFANGXINGUSERNAME',width:80,sortable:true">实物放行人</th>
                     <th data-options="field:'FWONO',width:180,sortable:true">FWO订单号</th>
                     <th data-options="field:'FOONO',width:190,sortable:true">FOO报关服务号</th>
-                    <th data-options="field:'FOONOBJ',width:190,sortable:true">FOO报检服务号</th>
-                    <th data-options="field:'CODE',width:100,sortable:true">业务编号</th>
-                    <th data-options="field:'CODE',width:80,sortable:true">业务编号</th>
                     <th data-options="field:'CUSTOMDISTRICTCODE',width:80,sortable:true">关区代码</th>
                     <th data-options="field:'LAWCONDITION',width:80,sortable:true,formatter:formatLAWCONDITION">是否法检</th>
                 </tr>
