--- a/Views/Declare/OnelineOut_List.cshtml
+++ b/Views/Declare/OnelineOut_List.cshtml
@@ -17,13 +17,11 @@
     ];
     //2 查询条件  --单据号
     var search_code = [
-        {
-            code: 'CODE', name: '业务编号', selected: true
-        },
+        { code: 'CODE', name: '业务编号', selected: true },
         { code: 'TURNPRENO', name: '转关预录入号' },
         { code: 'text', name: '万达号' },
         { code: 'ARRIVEDNO', name: '运抵编号' },
-        { code: 'text', name: '报关单号' },
+        { code: 'DECLARATIONCODE', name: '报关单号' },
         { code: 'FWONO', name: 'FWO订单号' },
         { code: 'FOONO', name: 'FO号' },
         { code: 'ARRIVEDNO', name: '运抵编号' }
@@ -49,6 +47,7 @@
             <thead data-options="frozen:true">
                 <tr>
                     <th data-options="field: 'ID',width:80,checkbox:true"></th>
+                    <th data-options="field:'CODE',width:120,sortable:true,">业务单号</th>
                     <th data-options="field:'SFGOODSUNIT',width:200,sortable:true,">发货人</th>
                     <th data-options="field:'DECLARATIONCODE',width:150,sortable:true">报关单号</th>
                     <th data-options="field:'DECLARATIONSTATUS',width:150,sortable:true">海关通关状态</th>
@@ -70,8 +69,7 @@
                     <th data-options="field:'DANZHENGFANGXINGUSERNAME',width:100,sortable:true">单证放行人</th>
                     <th data-options="field:'SHIWUFANGXINGUSERNAME',width:100,sortable:true">实物放行人</th>
                     <th data-options="field:'FWONO',width:180,sortable:true">FWO订单号</th>
-                    <th data-options="field:'FOONO',width:190,sortable:true">FOO报关服务号</th> 
-                    <th data-options="field:'CODE',width:100,sortable:true">业务编号</th>
+                    <th data-options="field:'FOONO',width:190,sortable:true">FOO报关服务号</th>
                     <th data-options="field:'CUSTOMDISTRICTCODE',width:100,sortable:true">关区代码</th>
                 </tr>
             </thead>
