--- a/Views/Declare/OverlayBonded_Edit.cshtml
+++ b/Views/Declare/OverlayBonded_Edit.cshtml
@@ -1,5 +1,6 @@
 ﻿
     <div class="easyui-tabs" id="many_form" style="height:auto">
+        <input type="hidden" name="page" value="/Declare/OverlayBonded_Edit" />
 @if (!string.IsNullOrEmpty(ViewData["id1"] + ""))
 {
         <div title="转入">
@@ -7,8 +8,8 @@
                 <input type="hidden" name="ID" value="@ViewData["id1"]" />
                 <input type="hidden" name="ASSOCIATENO" />
                 <input type="hidden" name="type" value="01" />
-                <input type="hidden" name="CODE" />
-                <input type="hidden" name="DECLARATIONCODE" />
+
+
                 <input type="hidden" name="ORDERCODE" />
                 <table class="scene">
                     <tr>
@@ -48,7 +49,17 @@
                             <input class="easyui-textbox" type="text" value="@ViewData["busiunitname2"]" disabled="disabled" />
                         </td>
                     </tr>
-
+   
+                    <tr>
+                        <td>
+                            <label>业务单号:</label>
+                            <input class="easyui-textbox" type="text" name="CODE" readonly="readonly" />
+                        </td>
+                        <td>
+                            <label> 报关单号:</label>
+                            <input class="easyui-textbox" type="text" name="DECLARATIONCODE" readonly="readonly" />
+                        </td>
+                    </tr>
                     <tr>
                         <td>
                             <label for="GUANWUJIESHOUTIME"> 关务接受时间:</label>
@@ -180,17 +191,17 @@
                     <tr>
 
                         <td style="text-align:left">
-                            <label for="LIHUOSIGN">理货标识:</label>
-                            <input class="" id="LIHUOSIGN" type="checkbox" name="LIHUOSIGN" value="1" />
+                            <label for="IFLIHUO">理货标识:</label>
+                            <input class="" id="IFLIHUO" type="checkbox" name="IFLIHUO" value="1" />
                         </td>
                         <td>
-                            <label for="LIHUOTIMES">理货次数:</label>
-                            <input class="easyui-numberspinner" name="LIHUOTIMES"
+                            <label for="LIHUOTOTAL">理货次数:</label>
+                            <input class="easyui-numberspinner" name="LIHUOTOTAL"
                                    data-options="min:0">
                         </td>
                         <td style="text-align:left">
-                            <label for="KOUHUOSIGN">扣货标识:</label>
-                            <input class="" id="KOUHUOSIGN" type="checkbox" name="KOUHUOSIGN" value="1" />
+                            <label for="IFKOUHUO">扣货标识:</label>
+                            <input class="" id="KOUHUOSIGN" type="checkbox" name="IFKOUHUO" value="1" />
                         </td>
                         <td>
                             <label for="KOUHUOTIME">扣货时间:</label>
@@ -233,13 +244,13 @@
                             <input class="" id="IFCHAYAN" type="checkbox" name="IFCHAYAN" value="1" />
                         </td>
                         <td>
-                            <label for="CHAYANTIMES">查验次数:</label>
-                            <input class="easyui-numberspinner" name="CHAYANTIMES"
+                            <label for="CHAYANTOTAL">查验次数:</label>
+                            <input class="easyui-numberspinner" name="CHAYANTOTAL"
                                    data-options="min:0">
                         </td>
                         <td>
-                            <label for="CHAYANREMARK">查验备注:</label>
-                            <input class="easyui-textbox" type="text" name="CHAYANREMARK" />
+                            <label for="CHAYANDESC">查验备注:</label>
+                            <input class="easyui-textbox" type="text" name="CHAYANDESC" />
                         </td>
                         <td>
                             <label for="CHAYANZHILINGXIAFATIME" style="width:100px;">查验指令下发时间:</label>
@@ -252,8 +263,8 @@
                             <input class="" id="IFTIAODANG" type="checkbox" name="IFTIAODANG" value="1" />
                         </td>
                         <td>
-                            <label for="TIAODANGTIMES">调档次数:</label>
-                            <input class="easyui-numberspinner" name="TIAODANGTIMES"
+                            <label for="TIAODANGTOTAL">调档次数:</label>
+                            <input class="easyui-numberspinner" name="TIAODANGTOTAL"
                                    data-options="min:0">
                         </td>
                         <td>
@@ -273,8 +284,6 @@
                 <input type="hidden" name="ID" value="@ViewData["id3"]" />
                 <input type="hidden" name="ASSOCIATENO" />
                 <input type="hidden" name="type" value="01" />
-                <input type="hidden" name="CODE" />
-                <input type="hidden" name="DECLARATIONCODE" />
                 <input type="hidden" name="ORDERCODE" />
                 <table class="scene">
                     <tr>
@@ -315,7 +324,16 @@
                         </td>
                     </tr>
 
-
+                    <tr>
+                        <td>
+                            <label>业务单号:</label>
+                            <input class="easyui-textbox" type="text" name="CODE" readonly="readonly" />
+                        </td>
+                        <td>
+                            <label> 报关单号:</label>
+                            <input class="easyui-textbox" type="text" name="DECLARATIONCODE" readonly="readonly" />
+                        </td>
+                    </tr>
 
                     <tr>
                         <td>
@@ -442,23 +460,23 @@
                         </td>
                         <td>
                             <label for="DECLSTATUS"> 报关状态:</label>
-                            <input class="easyui-textbox" type="text" name="DECLSTATUS" id="DECLSTATUS2" />
+                            <input class="easyui-textbox" type="text" name="DECLSTATUS" id="DECLSTATUS" />
                         </td>
                     </tr>
                     <tr>
 
                         <td style="text-align:left">
-                            <label for="LIHUOSIGN">理货标识:</label>
-                            <input class="" id="LIHUOSIGN" type="checkbox" name="LIHUOSIGN" value="1" />
+                            <label for="IFLIHUO">理货标识:</label>
+                            <input class="" id="IFLIHUO" type="checkbox" name="IFLIHUO" value="1" />
                         </td>
                         <td>
-                            <label for="LIHUOTIMES">理货次数:</label>
-                            <input class="easyui-numberspinner" name="LIHUOTIMES"
+                            <label for="LIHUOTOTAL">理货次数:</label>
+                            <input class="easyui-numberspinner" name="LIHUOTOTAL"
                                    data-options="min:0">
                         </td>
                         <td style="text-align:left">
-                            <label for="KOUHUOSIGN">扣货标识:</label>
-                            <input class="" id="KOUHUOSIGN" type="checkbox" name="KOUHUOSIGN" value="1" />
+                            <label for="IFKOUHUO">扣货标识:</label>
+                            <input class="" id="KOUHUOSIGN" type="checkbox" name="IFKOUHUO" value="1" />
                         </td>
                         <td>
                             <label for="KOUHUOTIME">扣货时间:</label>
@@ -501,13 +519,13 @@
                             <input class="" id="IFCHAYAN" type="checkbox" name="IFCHAYAN" value="1" />
                         </td>
                         <td>
-                            <label for="CHAYANTIMES">查验次数:</label>
-                            <input class="easyui-numberspinner" name="CHAYANTIMES"
+                            <label for="CHAYANTOTAL">查验次数:</label>
+                            <input class="easyui-numberspinner" name="CHAYANTOTAL"
                                    data-options="min:0">
                         </td>
                         <td>
-                            <label for="CHAYANREMARK">查验备注:</label>
-                            <input class="easyui-textbox" type="text" name="CHAYANREMARK" />
+                            <label for="CHAYANDESC">查验备注:</label>
+                            <input class="easyui-textbox" type="text" name="CHAYANDESC" />
                         </td>
                         <td>
                             <label for="CHAYANZHILINGXIAFATIME" style="width:100px;">查验指令下发时间:</label>
@@ -520,8 +538,8 @@
                             <input class="" id="IFTIAODANG" type="checkbox" name="IFTIAODANG" value="1" />
                         </td>
                         <td>
-                            <label for="TIAODANGTIMES">调档次数:</label>
-                            <input class="easyui-numberspinner" name="TIAODANGTIMES"
+                            <label for="TIAODANGTOTAL">调档次数:</label>
+                            <input class="easyui-numberspinner" name="TIAODANGTOTAL"
                                    data-options="min:0">
                         </td>
                         <td>
