--- a/Views/Declare/SpecialSupervision_List.cshtml
+++ b/Views/Declare/SpecialSupervision_List.cshtml
@@ -15,9 +15,7 @@
     ];
     //2 查询条件  --单据号
     var search_code = [
-        {
-            code: 'text', name: '报关单号', selected: true
-        },
+        { code: 'DECLARATIONCODE', name: '报关单号', selected: true },
         { code: 'CONTAINERNO', name: '集装箱号' },
         { code: 'TURNPRENO', name: '转关单号' },
         { code: 'FWONO', name: 'FWO订单号' },
@@ -45,7 +43,9 @@
             <thead data-options="frozen:true">
                 <tr>
                     <th data-options="field: 'ID',width:80,checkbox:true"></th>
-                    <th data-options="field:'SFGOODSUNIT',sortable:true">收/发货人</th>
+                    <th data-options="field:'CODE',width:120,sortable:true,">业务单号</th>
+                    <th data-options="field:'SGOODSUNIT',sortable:true">收货人</th>
+                    <th data-options="field:'FGOODSUNIT',sortable:true">发货人</th>
                     <th data-options="field:'DECLARATIONCODE',width:150,sortable:true">报关单号</th>
                     <th data-options="field:'DECLARATIONSTATUS',width:150,sortable:true">海关通关状态</th>
                     <th data-options="field:'text',width:100,sortable:true">关务状态</th>
@@ -65,8 +65,7 @@
                     <th data-options="field:'DANZHENGFANGXINGUSERNAME',width:100,sortable:true">单证放行人</th>
                     <th data-options="field:'SHIWUFANGXINGUSERNAME',width:100,sortable:true">实物放行人</th>
                     <th data-options="field:'FWONO',width:180,sortable:true">FWO订单号</th>
-                    <th data-options="field:'FOONO',width:190,sortable:true">FOO报关服务号</th> 
-                    <th data-options="field:'CODE',width:100,sortable:true">业务编号</th>
+                    <th data-options="field:'FOONO',width:190,sortable:true">FOO报关服务号</th>
                     <th data-options="field:'INOUTTYPE',width:100,sortable:true">进出口类别</th>
                     <th data-options="field:'REPWAYID',width:100,sortable:true">申报方式</th>
                 </tr>
