--- a/Views/Order/TongguandanInfo.cshtml
+++ b/Views/Order/TongguandanInfo.cshtml
@@ -1,21 +1,57 @@
-﻿
-@{
+﻿@{
     Layout = null;
 }
-<table id="dg" style="height:250px" class="easyui-datagrid"
-       data-options=" rownumbers:true,
-                                   dataType : 'json',
-                                   method:'get'">
-    <thead>
-        <tr>
-            <th data-options="field: 'ID', checkbox: true"></th>
-            <th data-options="field:'BUSIUNITNAME,sortable:true'">通关单号</th>
-            <th data-options="field:'TOTALNO,sortable:true'">报检单号</th>
-            <th data-options="field:'TOTALNO,sortable:true'">进出口类型</th>
-            <th data-options="field:'DIVIDENO,sortable:true'">总件数</th>
-            <th data-options="field:'GOODSWEIGHT,sortable:true'">总重量</th>
-            <th data-options="field:'DECLSHEETNUM,sortable:true'">通关单张数</th>
-            <th data-options="field:'DECLSHEETNUM,sortable:true'">报检状态</th>
-        </tr>
-    </thead>
-</table>
+<div id="Bjd">
+    <table id="Bjdinfo" style="height:250px" class="easyui-datagrid"
+           data-options="url: '/Order/LoadBjdList',
+    updateUrl: '/Order/SaveBgdinfo',
+    dataType: 'json',
+    method: 'get',
+    toolbar: '#tb',
+    pageSize: 10,
+    pageList: [10,20, 40, 60, 80, 100, 300],
+    pagination: true,">
+        <thead>
+            <tr>
+                <th data-options="field:'ORDERCODE',width:120,sortable:true">业务单号</th>
+                <th data-options="field:'INSPECTIONCODE',width:120,sortable:true">报检单号</th>
+                <th data-options="field:'CLEARANCECODE',width:120,sortable:true">通关单号</th>
+                <th data-options="field:'INSPSTATUS',width:120,sortable:true">国检状态</th>
+                <th data-options="field:'SHEETNUM',width:120,sortable:true">报检单张数</th>
+                <th data-options="field:'COMMODITYNUM',width:50,sortable:true">品名个数</th>
+                @*<th data-options="field:'ISPRINT',width:80,align:'center',formatter:formatISPRINT" editor="{type:'checkbox',options:{on:'1',off:'0'}}">是否打印</th>
+                <th data-options="field:'PRINTNUM',width:80,align:'center'" editor="{type:'numberbox'}">打印次数</th>*@
+                <th data-options="field:'action',width:50,align:'center',formatter:formatter">操作</th>
+            </tr>
+        </thead>
+    </table>
+</div>
+
+    <script type="text/javascript">
+        var CODE = $("input[name='CODE']").val();
+        $('#Bjdinfo').edatagrid({
+            queryParams: { data: CODE }
+        });
+
+        var host = window.location.host;
+        var ID = $("input[name='ID']").val();
+        var page = $("input[name='page']").val();
+
+        function formatISPRINT(value) {
+            if (value == 0) {
+                return "否";
+            } else {
+                return "是";
+            }
+        }
+        function formatter(value, row, index) {
+            var INSPECTIONCODE = row.INSPECTIONCODE;
+            var url = "http://" + host + page + "?ID=" + ID + "&INSPECTIONCODE=" + INSPECTIONCODE;
+            var s = '<a href="' + url + '">查看</a> ';
+            return s;
+        }
+
+        $(document).on("change", "#Bjd input", function () {
+            $("#Bjdinfo").edatagrid('saveRow');
+        });
+    </script>
