--- a/Views/Common/Attachment_List.cshtml
+++ b/Views/Common/Attachment_List.cshtml
@@ -51,7 +51,7 @@
                data-options="url: '/Common/LoadAttachmentList',
                             rownumbers: true,
                             dataType: 'json',
-                            method: 'get',
+                            method: 'post',
                             toolbar: '#tb',
                             pageSize: 20,
                             pageList: [20, 40, 60, 80, 100, 300],
