--- a/Views/Common/Attachment_Edit.cshtml
+++ b/Views/Common/Attachment_Edit.cshtml
@@ -49,7 +49,6 @@
                 '<div class="panel-heading" style="padding-left:5px;padding-right:5px">{[values.FILENAME.substr(0,23)]}<div style="float:right"><span class="glyphicon glyphicon-paperclip"></span></div></div>',
                 '<div class="panel-body" style="padding-left:5px;">{FILETYPENAME}|',
                 '<tpl>{[values.FILESIZE/1024 > 1024?Math.round(values.FILESIZE/(1024*1024))+"M":Math.round(values.FILESIZE/1024)+"K"]}</tpl>',
-                //'|{[values.UPLOADTIME.substr(0,values.UPLOADTIME.indexOf("T"))]}</div></div>',
                 '|{[values.CREATETIME]}</div></div>',
                 '</tpl>'
                 )
@@ -160,9 +159,8 @@
                 }]
             });
             win.show(); 
-            document.getElementById('fileViewDiv').innerHTML = '<embed id="pdf" width="100%" height="100%" src="/C/fileserver' + recs[0].get("FILEPATH") + '"></embed>';
+            document.getElementById('fileViewDiv').innerHTML = '<embed id="pdf" width="100%" height="100%" src="http://172.20.70.19:8011\/' + recs[0].get("FILEPATH") + '"></embed>';
         }
-
     </script>
 </head>
 <body>
